@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.star.gr" version="2.4.2" name="STAR Player" provider-name="Twilight0">
+<addon id="plugin.video.star.gr" version="2.4.3" name="STAR Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.addon" version="16.1.000"/>
-		<import addon="script.module.tulip" version="2.8.17" />
-		<import addon="plugin.video.youtube" version="6.8.10"/>
+		<import addon="script.module.tulip" version="2.9.10" />
+		<import addon="plugin.video.youtube" version="6.8.18"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -20,7 +20,11 @@
 		<source>https://github.com/Twilight0/plugin.video.star.gr</source>
 		<website>http://www.star.gr/</website>
 		<size>228454</size>
-		<news>[B]2.4.2[/B]
+		<news>[B]2.4.3[/B]
+- Indexers and resolver bug fixes
+- New Youtube API key
+
+[B]2.4.2[/B]
 - Bug fixes for live resolver
 
 [B]2.4.1[/B]
